--- a/css/user-list.css
+++ b/css/user-list.css
@@ -1,8 +1,43 @@
-body {
+/***************
+    Header
+***************/
+header {
     display: flex;
-}
-body h1 {
     flex-direction: row;
-    justify-content: center;
     align-items: center;
+    background-color: #060606;
+    height: 70px;
+}
+header a{
+    padding-right: 20px;
+}
+
+
+main h1 {
+  
+    text-align: center;
+}
+.full-list {
+  display: flex;
+
+}
+.shop-list{
+    display: flex;
+    flex-direction: row;
+  
+}
+.all-sort-list{
+    display: flex;
+    flex-direction: row;
+}
+.all-shops {
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    
+}
+.one-shop {
+    display: flex;
+    flex-direction: column;
+   
 }
